--- a/artiglow/.env.example
+++ b/artiglow/.env.example
@@ -8,3 +8,6 @@ SECRET_KEY='django-insecure-bbxmr%32&l(+2j9a-b8ts7foii_%t71u=0h@8pxkdia#!gpjn2'
 ALLOWED_HOSTS=127.0.0.1 localhost
 TIME_ZONE=UTC
 DEBUG=TRUE
+
+OPENAI_ORGANIZATION=
+OPENAI_API_KEY=
