--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.1.0
 cryptography==40.0.1
 defusedxml==0.7.1
 Django==4.2
+django-cors-headers==4.1.0
 django-debug-toolbar==4.0.0
 django-environ==0.10.0
 django-filter==23.1
